# ARB

./: .gitignore  Anchor.toml  DEPLOYMENT_GUIDE.md  README.md  package-lock.json  package.json
app/: .gitignore  add_role_to_users.sql  arb_treasury.json  check_address.cjs  check_all_rpcs.cjs  check_auth_ips.cjs  check_decimals.cjs  check_mints.cjs  check_rpc.cjs  check_treasury.cjs  check_user_balance.cjs  idl.json  middleware.ts  netlify.toml  next.config.ts  package.json  tailwind.config.js  test_public_endpoint.cjs  tsconfig.json  tsconfig.node.json  verify_keypair.cjs  verify_mainnet.cjs
app/app/: globals.css  layout.tsx  page.modernlanding.tsx  page.tsx
app/app/about/: page.tsx
app/app/admin/: layout.tsx  page.tsx
app/app/components/: AuthModal.tsx  DynamicTimestamp.tsx  EnhancedUploadDialog.tsx  FileUpload.tsx  Footer.tsx  (+19 more)
app/scripts/: check_deployment.ts  find_vault.ts  mint-arb.ts  sync_deletion.sql
app/types/: crypto-js.d.ts  next-auth.d.ts  papaparse.d.ts  qrcode.d.ts
docs/: sample_dataset1.csv
programs/africa_research_base/: Cargo.toml
programs/africa_research_base/src/: constants.rs  error.rs  events.rs  lib.rs
programs/africa_research_base/src/instructions/: create_dataset.rs  initialize.rs  mod.rs  redeem.rs  update_reputation.rs
programs/africa_research_base/src/state/: attribution.rs  citation.rs  dataset.rs  mod.rs  registry.rs  reputation.rs
supabase/: community.sql  config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20251224225713_remote_schema.sql
tests/: test_initialize.ts  types.ts  utils.ts
(+65 files in other folders)
