[package]
name = "africa_research_base"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "africa_research_base"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
solana-program = "3.0.0"

